--- a/style.css
+++ b/style.css
@@ -1,32 +1,19 @@
+:root {
+    --grid-sides: 1;
+}
+
+
 #mainGridContainer {
+
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
-    grid-gap: 1px;
-    width: 31.25rem;
-    height: 31.25rem;
-    margin: 0 auto 2rem auto;
+
+    width: 50rem;
+    height: 50rem;
+
+    grid-gap: 0.1em;
+    grid-template-rows: repeat(var(--grid-sides), 1fr);
+    grid-template-columns: repeat(var(--grid-sides), 1fr);
+
 }
 
-.square {
-    border-style: solid;
-    border-width: 0.01rem;
-    border-color: black;
-}
-
-#title {
-    text-align: center
-}
-
-#reset {
-    display: grid;
-    margin: auto;
-    color: blue;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    cursor: pointer;
-}
-
-.square:hover {
-    cursor: pointer;
-}
+;
