--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ button {
     border: 0.2rem ridge;
     border-radius: 0.5rem;
     align-items: center;
+    background-color: #d5d8dc;
 }
 
 button:hover {
